<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/room_filter_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/pick_room_menu"
        android:textSize="26sp" />

    <ListView
        android:id="@+id/room_listview_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>