...
    <string name="no_meeting_toast">"Aucune réunion trouvée"</string>
    <string name="invalid_email_input">"Adresse e-mail invalide"</string>
    <string name="filter_meeting_menu_descr">Filtrer les réunions par date ou par salle</string>
    <string name="filter_meeting_descr">Filtrer les réunions</string>
    <string name="filter_by_date">Filtrer par date</string>
    <string name="filter_by_date_descr">Filtrer par date</string>
    <string name="filter_by_room">Filtrer par salle</string>
    <string name="filter_by_room_descr">Filtrer par salle</string>
    <string name="reset_filter">Supprimer les filtres</string>
    <string name="reset_filter_descr">Supprimer les filtres</string>
    <string name="meeting_title_et_hint">Nom de la réunion</string>
    <string name="description_hint">Description</string>
    <string name="room_actv_layout_hint">Salle</string>
    <string name="warning_time_end_symbol">warning time end symbol</string>
</resources>
