...
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.detail.DetailFragment">


            <TextView
                android:id="@+id/meeting_title_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:textAllCaps="true"
                android:textSize="18sp"
...
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_baseline_place_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_hour_title_detail" />

            <TextView
                android:id="@+id/room_name_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:background="@drawable/room"
                android:gravity="center"
                android:textStyle="bold"
...
